--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -3433,6 +3433,10 @@ Topics:
     Topics:
     - Name: Backing up applications on AWS STS using OADP
       File: oadp-aws-sts
+  - Name: OADP and 3scale
+    Dir: installing
+    - Name: Backing up and restoring with 3scale
+      File: 3scale
   - Name: OADP 1.2 Data Mover
     Dir: installing
     Topics:
