OSSM-6303 [DOC] Migrating from Jaeger to OTEL + Tempo

--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -4202,6 +4202,8 @@ Topics:
     File: servicemesh-release-notes
   - Name: Upgrading Service Mesh
     File: upgrading-ossm
+  - Name: Service Mesh Migration Guides
+    File: ossm-migration-guides
   - Name: Understanding Service Mesh
     File: ossm-architecture
   - Name: Service Mesh deployment models
