POC: Created the general structure for Terraform tutorials

--- a/_topic_maps/_topic_map_rosa.yml
+++ b/_topic_maps/_topic_map_rosa.yml
@@ -119,6 +119,12 @@ Topics:
   File: rosa-mobb-verify-permissions-sts-deployment
 - Name: Deploying ROSA with a Custom DNS Resolver
   File: cloud-experts-custom-dns-resolver
+- Name: Terraform
+  Dir: terraform
+  Distros: openshift-rosa
+  Topics:
+  - Name: Customizing your cluster with Terraform
+    File: cloud-experts-terraform-customization
 - Name: Using AWS WAF and Amazon CloudFront to protect ROSA workloads
   File: cloud-experts-using-cloudfront-and-waf
 - Name: Using AWS WAF and AWS ALBs to protect ROSA workloads
