Add docs on setting timeouts for revisions

--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -132,6 +132,8 @@ Topics:
     File: configuring-kourier
   - Name: Restrictive network policies
     File: restrictive-network-policies
+  - Name: Configuring revision timeouts
+    File: configuring-revision-timeouts
 - Name: Debugging OpenShift Serverless applications
   File: debugging-serverless-applications
 - Name: Kourier and Istio ingresses
