RHDEVDOCS-6022: Content creation for namespace-scoped Argo Rollouts installation
Incorporating QE review comment

Incorporated additional peer review comments

--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -119,6 +119,8 @@ Topics:
   File: getting-started-with-argo-rollouts
 - Name: Routing traffic by using Argo Rollouts
   File: routing-traffic-by-using-argo-rollouts
+- Name: Enabling support for namespace-scoped Argo Rollouts installation
+  File: enable-support-for-namespace-scoped-argo-rollouts-installation
 ---
 Name: Security
 Dir: securing_openshift_gitops
