RHDEVDOCS-6022: Content creation for namespace-scoped Argo Rollouts installation
Incorporating QE review comment

Incorporated additional peer review comments

--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -121,6 +121,8 @@ Topics:
   File: routing-traffic-by-using-argo-rollouts
 - Name: Routing traffic by using Argo Rollouts for OpenShift Service Mesh
   File: routing-traffic-by-using-argo-rollouts-for-openshift-service-mesh
+- Name: Enabling support for namespace-scoped Argo Rollouts installation
+  File: enable-support-for-namespace-scoped-argo-rollouts-installation
 ---
 Name: Security
 Dir: securing_openshift_gitops
