--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -2262,6 +2262,8 @@ Topics:
   File: index
 - Name: Using machine config objects to configure nodes
   File: machine-configs-configure
+- Name: Using custom machine config pools to configure nodes
+  File: machine-config-pool-custom
 - Name: Using node disruption policies to minimize disruption from machine config changes
   File: machine-config-node-disruption
 - Name: Configuring MCO-related custom resources
