--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -2260,10 +2260,10 @@ Distros: openshift-enterprise, openshift-origin
 Topics:
 - Name: Machine configuration overview
   File: index
-- Name: Using machine config objects to configure nodes
+- Name: About using machine configs to configure nodes
+  File: machine-config-about
+- Name: Configuring nodes by using machine config objects
   File: machine-configs-configure
-- Name: Using custom machine config pools to configure nodes
-  File: machine-config-pool-custom
 - Name: Using node disruption policies to minimize disruption from machine config changes
   File: machine-config-node-disruption
 - Name: Configuring MCO-related custom resources
