--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -106,6 +106,8 @@ Topics:
   Topics:
   - Name: Creating OpenShift Serverless applications
     File: serverless-applications
+- Name: Scalability and Performance
+  File: scalability-and-performance-serving
 - Name: Autoscaling
   Dir: autoscaling
   Topics:
