--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -2482,6 +2482,8 @@ Topics:
     File: hcp-deploy-dc-virt
   - Name: Deploying hosted control planes on bare metal in a disconnected environment
     File: hcp-deploy-dc-bm
+  - Name: Deploying hosted control planes on IBM Z in a disconnected environment
+    File: disconnected-install-ibmz-hcp
   - Name: Monitoring user workload in a disconnected environment
     File: hcp-dc-monitor
 - Name: Updating hosted control planes
