--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -2734,6 +2734,8 @@ Topics:
         File: log6x-about
       - Name: Configuring LokiStack storage
         File: log6x-loki
+      - Name: Log output types
+        File: log6x-output
       - Name: Configuring log forwarding
         File: log6x-clf
       - Name: Visualization for logging
