--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -968,6 +968,8 @@ Topics:
     File: co-overview
   - Name: Compliance Operator release notes
     File: compliance-operator-release-notes
+  - Name: Compliance Operator support
+    File: co-support
   - Name: Compliance Operator concepts
     Dir: co-concepts
     Topics:
@@ -1001,7 +1003,7 @@ Topics:
       File: compliance-operator-remediation
     - Name: Performing advanced Compliance Operator tasks
       File: compliance-operator-advanced
-    - Name: Troubleshooting the Compliance Operator
+    - Name: Troubleshooting Compliance Operator scans
       File: compliance-operator-troubleshooting
     - Name: Using the oc-compliance plugin
       File: oc-compliance-plug-in-using
