Fixup core OCP relnotes stub file on main

--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -6,7 +6,7 @@
 # ---                                  <= Record delimiter
 # Name: Origin of the Species          <= Display name of topic group
 # Dir:  origin_of_the_species          <= Directory name of topic group
-# Topics:
+# Topics:s
 #   - Name: The Majestic Marmoset      <= Topic name
 #     File: the_majestic_marmoset      <= Topic file under group dir +/-
 #   - Name: The Curious Crocodile      <= Topic 2 name
@@ -52,8 +52,8 @@ Name: Release notes
 Dir: release_notes
 Distros: openshift-enterprise
 Topics:
-- Name: OpenShift Container Platform 4.18 release notes
-  File: ocp-4-18-release-notes
+- Name: OpenShift Container Platform release notes
+  File: ocp-release-notes
 ---
 Name: Getting started
 Dir: getting_started
