--- a/_topic_maps/_topic_map_rosa_hcp.yml
+++ b/_topic_maps/_topic_map_rosa_hcp.yml
@@ -214,6 +214,17 @@ Topics:
 # - Name: Backing up applications
 #   File: backing-up-applications
 ---
+Name: Registry
+Dir: registry
+Distros: openshift-rosa-hcp
+Topics:
+- Name: Registry overview
+  File: index
+- Name: Image Registry Operator in Red Hat OpenShift Service on AWS
+  File: configuring-registry-operator
+- Name: Accessing the registry
+  File: accessing-the-registry
+---
 Name: Nodes
 Dir: nodes
 Distros: openshift-rosa-hcp
