--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -1431,6 +1431,8 @@ Topics:
   Topics:
   - Name: Understanding multiple networks
     File: understanding-multiple-networks
+  - Name: Understanding user defined networks
+    File: understanding-user-defined-network
   - Name: Configuring an additional network
     File: configuring-additional-network
   - Name: About virtual routing and forwarding
