OSDOCS#11830: Networking HCP Migration

--- a/_distro_map.yml
+++ b/_distro_map.yml
@@ -187,7 +187,7 @@ openshift-aro:
       name: '4'
       dir: aro/4
 openshift-rosa:
-  name: Red Hat OpenShift Service on AWS
+  name: ROSA (classic architecture)
   author: OpenShift Documentation Project <openshift-docs@redhat.com>
   site: commercial
   site_name: Documentation
@@ -200,7 +200,7 @@ openshift-rosa:
       name: ''
       dir: rosa-preview/
 openshift-rosa-hcp:
-  name: Red Hat OpenShift Service on AWS
+  name: ROSA with HCP
   author: OpenShift Documentation Project <openshift-docs@redhat.com>
   site: commercial
   site_name: Documentation
