--- a/_topic_maps/_topic_map_rosa_hcp.yml
+++ b/_topic_maps/_topic_map_rosa_hcp.yml
@@ -327,6 +327,50 @@ Topics:
 # - Name: Backing up applications
 #   File: backing-up-applications
 ---
+Name: Networking
+Dir: networking
+Distros: openshift-rosa-hcp
+Topics:
+- Name: About networking
+  File: about-managed-networking
+- Name: Understanding the DNS Operator
+  File: dns-operator
+- Name: Understanding the Ingress Operator
+  File: ingress-operator
+# - Name: Network verification
+#   File: network-verification
+# - Name: Configuring a cluster-wide proxy during installation
+#   File: configuring-cluster-wide-proxy
+# - Name: CIDR range definitions
+#   File: cidr-range-definitions
+# - Name: Network policy
+#   Dir: network_policy
+#   Topics:
+#   - Name: About network policy
+#     File: about-network-policy
+#   - Name: Creating a network policy
+#     File: creating-network-policy
+#   - Name: Viewing a network policy
+#     File: viewing-network-policy
+#   - Name: Deleting a network policy
+#     File: deleting-network-policy
+#   - Name: Configuring multitenant isolation with network policy
+#     File: multitenant-network-policy
+- Name: OVN-Kubernetes network plugin
+  Dir: ovn_kubernetes_network_provider
+  Topics:
+  - Name: About the OpenShift SDN network plugin
+    File: about-ovn-kubernetes
+  - Name: Configuring an egress IP address
+    File: configuring-egress-ips-ovn
+# - Name: Configuring Routes
+#   Dir: routes
+#   Topics:
+#   - Name: Route configuration
+#     File: route-configuration
+#   - Name: Secured routes
+#     File: secured-routes
+---
 Name: Registry
 Dir: registry
 Distros: openshift-rosa-hcp
