OSDOCS#10249: Drafted docs for creating a disconnected cluster

--- a/_topic_maps/_topic_map_rosa.yml
+++ b/_topic_maps/_topic_map_rosa.yml
@@ -261,6 +261,8 @@ Topics:
     File: rosa-hcp-creating-a-cluster-quickly-terraform
 - Name: Creating ROSA with HCP clusters using a custom AWS KMS encryption key
   File: rosa-hcp-creating-cluster-with-aws-kms-key
+- Name: Creating a disconnected ROSA cluster
+  File: hcp-aws-disconnected-install
 - Name: Creating a private cluster on ROSA with HCP
   File: rosa-hcp-aws-private-creating-cluster
 - Name: Creating ROSA with HCP clusters with external authentication
