--- a/_topic_maps/_topic_map_rosa_hcp.yml
+++ b/_topic_maps/_topic_map_rosa_hcp.yml
@@ -214,6 +214,8 @@ Topics:
   File: rosa-hcp-sts-creating-a-cluster-ext-auth
 - Name: Using the Node Tuning Operator on ROSA with HCP
   File: rosa-tuning-config
+- Name: Creating a disconnected ROSA cluster
+  File: hcp-aws-disconnected-install
 # ---
 # Name: Install ROSA Classic clusters
 # Dir: rosa_install_access_delete_clusters
