--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -2376,8 +2376,20 @@ Distros: openshift-origin,openshift-enterprise
 Topics:
 - Name: Red Hat OpenShift support for Windows Containers overview
   File: index
-- Name: Red Hat OpenShift support for Windows Containers release notes
-  File: windows-containers-release-notes-7-x
+- Name: Release notes
+  Dir: wmco_rn
+  Topics:
+  - Name: Red Hat OpenShift support for Windows Containers release notes
+    File: windows-containers-release-notes-7-x
+  - Name: Past releases
+    File: windows-containers-release-notes-7-x-past
+  - Name: Windows Machine Config Operator prerequisites
+    File: windows-containers-release-notes-7-x-prereqs
+  - Name: Windows Machine Config Operator known limitations
+    File: windows-containers-release-notes-7-x-known-limitations
+- Name: Getting support
+  File: windows-containers-support
+  Distros: openshift-enterprise
 - Name: Understanding Windows container workloads
   File: understanding-windows-container-workloads
 - Name: Enabling Windows container workloads
