--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -1454,22 +1454,36 @@ Topics:
   Topics:
   - Name: Understanding multiple networks
     File: understanding-multiple-networks
-  - Name: Configuring an additional network
-    File: configuring-additional-network
+  - Name: Primary networks
+    Dir: primary_networks
+    Distros: openshift-enterprise, openshift-origin
+    Topics:
+    - Name: Using NetworkAttachmentDefinition
+      File: creating-primary-nad
+  - Name: Secondary networks
+    Dir: secondary_networks
+    Distros: openshift-enterprise, openshift-origin
+    Topics:
+    - Name: Creating secondary networks on OVN-Kubernetes network plugin
+      File: creating-secondary-nwt-ovnk
+    - Name: Creating secondary networks with other CNI
+      File: creating-secondary-nwt-other-cni
+    - Name: Attaching a pod to an additional network
+      File: attaching-pod
+    - Name: Configuring multi-network policy
+      File: configuring-multi-network-policy
+    - Name: Removing a pod from an additional network
+      File: removing-pod
+    - Name: Editing an additional network
+      File: edit-additional-network
+    - Name: Removing an additional network
+      File: remove-additional-network
+    - Name: Configuring IP address assignment for secondary networks
+      File: configuring-ip-secondary-nwt
+    - Name: Configuring the master interface in the container network namespace
+      File: configuring-master-interface
   - Name: About virtual routing and forwarding
     File: about-virtual-routing-and-forwarding
-  - Name: Configuring multi-network policy
-    File: configuring-multi-network-policy
-  - Name: Attaching a pod to an additional network
-    File: attaching-pod
-  - Name: Removing a pod from an additional network
-    File: removing-pod
-  - Name: Editing an additional network
-    File: edit-additional-network
-  - Name: Removing an additional network
-    File: remove-additional-network
-  - Name: Assigning a secondary network to a VRF
-    File: assigning-a-secondary-network-to-a-vrf
 - Name: Hardware networks
   Dir: hardware_networks
   Distros: openshift-enterprise,openshift-origin
