CNV-39643: Document generlizing a Linux VM

--- a/_topic_maps/_topic_map_rosa_hcp.yml
+++ b/_topic_maps/_topic_map_rosa_hcp.yml
@@ -1730,6 +1730,8 @@ Topics:
 #       File: virt-creating-vms-from-web-images
 #     - Name: Creating VMs by uploading images
 #       File: virt-creating-vms-uploading-images
+#     - Name: Cloning VMs
+#       File: virt-cloning-vms
 #     - Name: Creating VMs by cloning PVCs
 #       File: virt-creating-vms-by-cloning-pvcs
 #     - Name: Installing the QEMU guest agent and VirtIO drivers
