put back PTP YAML CRs for 4.14+

--- a/snippets/ztp_PtpConfigDualCardGmWpc.yaml
+++ b/snippets/ztp_PtpConfigDualCardGmWpc.yaml
@@ -1,5 +1,5 @@
-# In this example two cards $iface_nic1 and $iface_nic2 are connected via
-# SMA1 ports by a cable and $iface_nic2 receives 1PPS signals from $iface_nic1
+# In this example 2 cards $iface_master and $iface_master_1 are connected via SMA1 ports by a cable
+# and $iface_master_1 receives 1PPS signals from $iface_master
 apiVersion: ptp.openshift.io/v1
 kind: PtpConfig
 metadata:
@@ -11,7 +11,7 @@ spec:
   profile:
   - name: "grandmaster"
     ptp4lOpts: "-2 --summary_interval -4"
-    phc2sysOpts: -r -u 0 -m -w -N 8 -R 16 -s $iface_nic1 -n 24
+    phc2sysOpts: -r -u 0 -m -w -N 8 -R 16 -s $iface_master -n 24
     ptpSchedulingPolicy: SCHED_FIFO
     ptpSchedulingPriority: 10
     ptpSettings:
@@ -24,12 +24,12 @@ spec:
           LocalHoldoverTimeout: 14400
           MaxInSpecOffset: 100
         pins: $e810_pins
-        #  "$iface_nic1":
+        #  "$iface_master":
         #    "U.FL2": "0 2"
         #    "U.FL1": "0 1"
         #    "SMA2": "0 2"
         #    "SMA1": "2 1"
-        #  "$iface_nic2":
+        #  "$iface_master_1":
         #    "U.FL2": "0 2"
         #    "U.FL1": "0 1"
         #    "SMA2": "0 2"
@@ -81,7 +81,7 @@ spec:
               - "1"
               - "-e"
               - "SURVEYIN,600,50000"
-            reportOutput: true
+            reportOutput: true  
           - args: #ubxtool -P 29.20 -p MON-HW
               - "-P"
               - "29.20"
@@ -107,30 +107,21 @@ spec:
       #example value of gnss_serialport is /dev/ttyGNSS_1700_0
       ts2phc.nmea_serialport $gnss_serialport
       leapfile  /usr/share/zoneinfo/leap-seconds.list
-      [$iface_nic1]
+      [$iface_master]
       ts2phc.extts_polarity rising
       ts2phc.extts_correction 0
-      [$iface_nic2]
-      ts2phc.master 0
+      [$iface_master_1]
       ts2phc.extts_polarity rising
       #this is a measured value in nanoseconds to compensate for SMA cable delay
       ts2phc.extts_correction -10
     ptp4lConf: |
-      [$iface_nic1]
+      [$iface_master]
       masterOnly 1
-      [$iface_nic1_1]
+      [$iface_master_1]
       masterOnly 1
-      [$iface_nic1_2]
+      [$iface_master_1_1]
       masterOnly 1
-      [$iface_nic1_3]
-      masterOnly 1
-      [$iface_nic2]
-      masterOnly 1
-      [$iface_nic2_1]
-      masterOnly 1
-      [$iface_nic2_2]
-      masterOnly 1
-      [$iface_nic2_3]
+      [$iface_master_1_2]
       masterOnly 1
       [global]
       #
