--- a/snippets/ptp_PtpConfigGmWpc.yaml
+++ b/snippets/ptp_PtpConfigGmWpc.yaml
@@ -1,5 +1,3 @@
-# The grandmaster profile is provided for testing only
-# It is not installed on production clusters
 apiVersion: ptp.openshift.io/v1
 kind: PtpConfig
 metadata:
@@ -10,7 +8,7 @@ spec:
   profile:
     - name: "grandmaster"
       ptp4lOpts: "-2 --summary_interval -4"
-      phc2sysOpts: -r -u 0 -m -O -37 -N 8 -R 16 -s $iface_master -n 24
+      phc2sysOpts: -r -u 0 -m -w -N 8 -R 16 -s $iface_master -n 24
       ptpSchedulingPolicy: SCHED_FIFO
       ptpSchedulingPriority: 10
       ptpSettings:
@@ -82,11 +80,11 @@ spec:
                 - "-p"
                 - "MON-HW"
               reportOutput: true
-            - args: #ubxtool -P 29.20 -p CFG-MSG,1,38,300
+            - args: #ubxtool -P 29.20 -p CFG-MSG,1,38,248
                 - "-P"
                 - "29.20"
                 - "-p"
-                - "CFG-MSG,1,38,300"
+                - "CFG-MSG,1,38,248"
               reportOutput: true
       ts2phcOpts: " "
       ts2phcConf: |
@@ -100,7 +98,6 @@ spec:
         #cat /dev/GNSS to find available serial port
         #example value of gnss_serialport is /dev/ttyGNSS_1700_0
         ts2phc.nmea_serialport $gnss_serialport
-        leapfile  /usr/share/zoneinfo/leap-seconds.list
         [$iface_master]
         ts2phc.extts_polarity rising
         ts2phc.extts_correction 0
