--- a/_topic_maps/_topic_map_rosa.yml
+++ b/_topic_maps/_topic_map_rosa.yml
@@ -22,6 +22,13 @@
 # topic groups and topics on the main page.
 
 ---
+Name: Symlink test
+Dir: rosa_symlink_test
+Distros: openshift-rosa
+Topics:
+- Name: blah
+  File: symlink-to-something-else
+---
 Name: About
 Dir: welcome
 Distros: openshift-rosa
