Adding the Security HCP cherrypick

--- a/_topic_maps/_topic_map_rosa_hcp.yml
+++ b/_topic_maps/_topic_map_rosa_hcp.yml
@@ -524,16 +524,16 @@ Topics:
 # - Name: Configuring PID limits
 #   File: rosa-configuring-pid-limits
 #   Distros: openshift-rosa-hcp
-# ---
-# Name: Security and compliance
-# Dir: security
-# Distros: openshift-rosa-hcp
-# Topics:
+---
+Name: Security and compliance
+Dir: security
+Distros: openshift-rosa-hcp
+Topics:
 #- Name: Audit logs
 #  File: audit-log-view
-# - Name: Adding additional constraints for IP-based AWS role assumption
-#   File: rosa-adding-additional-constraints-for-ip-based-aws-role-assumption
-# ---
+- Name: Adding additional constraints for IP-based AWS role assumption
+  File: rosa-adding-additional-constraints-for-ip-based-aws-role-assumption
+---
 # - Name: Security
 #   File: rosa-security
 # - Name: Application and cluster compliance
@@ -617,7 +617,7 @@ Topics:
 #      File: cco-mode-manual
 #    - Name: Manual mode with short-term credentials for components
 #      File: cco-short-term-creds
----
+#---
 Name: Upgrading
 Dir: upgrading
 Distros: openshift-rosa-hcp
