OSDOCS-6582:Doc enhancement for CLIOT-28 CPU Usage guidance

--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -3038,6 +3038,10 @@ Topics:
 - Name: Planning your environment according to object maximums
   File: planning-your-environment-according-to-object-maximums
   Distros: openshift-origin,openshift-enterprise
+- Name: Compute Resource Quotas
+  Dir: compute_resource_quotas
+  File: assembly-compute-resources 
+  Distros: openshift-origin,openshift-enterprise
 - Name: Recommended host practices for IBM Z & IBM LinuxONE environments
   File: ibm-z-recommended-host-practices
   Distros: openshift-enterprise
