OSDOCS-11397 Correcting network docs structure for 4.16

--- a/_topic_maps/_topic_map_rosa.yml
+++ b/_topic_maps/_topic_map_rosa.yml
@@ -1084,9 +1084,13 @@ Topics:
   File: ingress-operator
 - Name: AWS Load Balancer Operator
   File: aws-load-balancer-operator
-- Name: OpenShift SDN default CNI network provider
-  Dir: openshift_sdn
+- Name: OpenShift OVN default CNI network provider
+  Dir: ovn_kubernetes_network_provider
   Topics:
+  - Name: About the OpenShift OVN network plugin
+    File: about-ovn-kubernetes
+  - Name: Configuring an egress IP address
+    File: configuring-egress-ips-ovn
   - Name: Enabling multicast for a project
     File: enabling-multicast
 - Name: Network verification
@@ -1129,13 +1133,6 @@ Topics:
       File: multitenant-network-policy
   - Name: Understanding the Ingress Node Firewall Operator
     File: ingress-node-firewall-operator
-- Name: OVN-Kubernetes network plugin
-  Dir: ovn_kubernetes_network_provider
-  Topics:
-  - Name: About the OpenShift SDN network plugin
-    File: about-ovn-kubernetes
-  - Name: Configuring an egress IP address
-    File: configuring-egress-ips-ovn
 - Name: Configuring Routes
   Dir: routes
   Topics:
