--- a/_topic_maps/_topic_map_osd.yml
+++ b/_topic_maps/_topic_map_osd.yml
@@ -820,11 +820,21 @@ Topics:
   File: dns-operator
 - Name: Understanding the Ingress Operator
   File: ingress-operator
-- Name: OpenShift SDN default CNI network provider
-  Dir: openshift_sdn
+- Name: OpenShift OVN default CNI network provider
+  Dir: ovn_kubernetes_network_provider
   Topics:
+  - Name: About the OpenShift OVN network plugin
+    File: about-ovn-kubernetes
+# TODO OSDOCS-11397: The next file was not present in OSD initially, need to verify if it applies
+  # - Name: Configuring an egress IP address
+  #   File: configuring-egress-ips-ovn
   - Name: Enabling multicast for a project
     File: enabling-multicast
+# - Name: OpenShift SDN default CNI network provider
+#   Dir: openshift_sdn
+#   Topics:
+#   - Name: Enabling multicast for a project
+#     File: enabling-multicast
 - Name: Network verification
   File: network-verification
 - Name: Configuring a cluster-wide proxy during installation
@@ -851,11 +861,6 @@ Topics:
       File: deleting-network-policy
     - Name: Configuring multitenant isolation with network policy
       File: multitenant-network-policy
-- Name: OVN-Kubernetes network plugin
-  Dir: ovn_kubernetes_network_provider
-  Topics:
-  - Name: About the OpenShift SDN network plugin
-    File: about-ovn-kubernetes
 - Name: Configuring Routes
   Dir: routes
   Topics:
