--- a/_topic_maps/_topic_map_rosa_hcp.yml
+++ b/_topic_maps/_topic_map_rosa_hcp.yml
@@ -1043,9 +1043,13 @@ Topics:
 #   File: ingress-operator
 # - Name: AWS Load Balancer Operator
 #   File: aws-load-balancer-operator
-# - Name: OpenShift SDN default CNI network provider
-#   Dir: openshift_sdn
+# - Name: OpenShift OVN default CNI network provider
+#   Dir: ovn_kubernetes_network_provider
 #   Topics:
+#   - Name: About the OpenShift OVN network plugin
+#     File: about-ovn-kubernetes
+#   - Name: Configuring an egress IP address
+#     File: configuring-egress-ips-ovn
 #   - Name: Enabling multicast for a project
 #     File: enabling-multicast
 # - Name: Network verification
@@ -1067,11 +1071,6 @@ Topics:
 #     File: deleting-network-policy
 #   - Name: Configuring multitenant isolation with network policy
 #     File: multitenant-network-policy
-# - Name: OVN-Kubernetes network plugin
-#   Dir: ovn_kubernetes_network_provider
-#   Topics:
-#   - Name: Configuring an egress IP address
-#     File: configuring-egress-ips-ovn
 # - Name: Configuring Routes
 #   Dir: routes
 #   Topics:
