--- a/_topic_maps/_topic_map_rosa_hcp.yml
+++ b/_topic_maps/_topic_map_rosa_hcp.yml
@@ -114,36 +114,38 @@ Topics:
 #     File: rosa-deleting-cluster
 #   - Name: Command quick reference for creating clusters and users
 #     File: rosa-quickstart
-# --
-# Name: Support
-# Dir: support
-# Distros: openshift-rosa-hcp
-# Topics:
-# - Name: Support overview
-#   File: index
-# - Name: Managing your cluster resources
-#   File: managing-cluster-resources
-# - Name: Getting support
-#   File: getting-support
-#   Distros: openshift-rosa-hcp
-# - Name: Remote health monitoring with connected clusters
-#   Dir: remote_health_monitoring
-#   Distros: openshift-rosa-hcp
-#   Topics:
-#   - Name: About remote health monitoring
-#     File: about-remote-health-monitoring
-#   - Name: Showing data collected by remote health monitoring
-#     File: showing-data-collected-by-remote-health-monitoring
+---
+Name: Support
+Dir: support
+Distros: openshift-rosa-hcp
+Topics:
+- Name: Support overview
+  File: index
+- Name: Managing your cluster resources
+  File: managing-cluster-resources
+- Name: Approved Access
+  File: approved-access
+- Name: Getting support
+  File: getting-support
+  Distros: openshift-rosa-hcp
+- Name: Remote health monitoring with connected clusters
+  Dir: remote_health_monitoring
+  Distros: openshift-rosa-hcp
+  Topics:
+  - Name: About remote health monitoring
+    File: about-remote-health-monitoring
+  - Name: Showing data collected by remote health monitoring
+    File: showing-data-collected-by-remote-health-monitoring
 #  cannot get resource "secrets" in API group "" in the namespace "openshift-config"
 #   - Name: Opting out of remote health reporting
 #     File: opting-out-of-remote-health-reporting
 #  cannot get resource "secrets" in API group "" in the namespace "openshift-config"
 #   - Name: Enabling remote health reporting
 #     File: enabling-remote-health-reporting
-#   - Name: Using Insights to identify issues with your cluster
-#     File: using-insights-to-identify-issues-with-your-cluster
-#   - Name: Using Insights Operator
-#     File: using-insights-operator
+  - Name: Using Insights to identify issues with your cluster
+    File: using-insights-to-identify-issues-with-your-cluster
+  - Name: Using Insights Operator
+    File: using-insights-operator
 #  Not supported per Michael McNeill
 #  - Name: Using remote health reporting in a restricted network
 #    File: remote-health-reporting-from-restricted-network
@@ -151,25 +153,25 @@ Topics:
 #   - Name: Importing simple content access entitlements with Insights Operator
 #     File: insights-operator-simple-access
 #  must-gather not supported for customers, per Dustin Row, cannot create resource "namespaces"
-#  - Name: Gathering data about your cluster
-#    File: gathering-cluster-data
-#    Distros: openshift-rosa-hcp
-# - Name: Summarizing cluster specifications
-#   File: summarizing-cluster-specifications
-#   Distros: openshift-rosa-hcp
-# - Name: Troubleshooting
-#   Dir: troubleshooting
-#   Distros: openshift-rosa-hcp
-#   Topics:
+- Name: Gathering data about your cluster
+   File: gathering-cluster-data
+   Distros: openshift-rosa-hcp
+- Name: Summarizing cluster specifications
+  File: summarizing-cluster-specifications
+  Distros: openshift-rosa-hcp
+- Name: Troubleshooting
+  Dir: troubleshooting
+  Distros: openshift-rosa-hcp
+  Topics:
 #  rosa has own troubleshooting installations
 #   - Name: Troubleshooting installations
 #     File: troubleshooting-installations
-#   - Name: Troubleshooting ROSA installations
-#     File: rosa-troubleshooting-installations
-#   - Name: Troubleshooting networking
-#     File: rosa-troubleshooting-networking
-#   - Name: Verifying node health
-#     File: verifying-node-health
+  - Name: Troubleshooting ROSA installations
+    File: rosa-troubleshooting-installations
+  - Name: Troubleshooting networking
+    File: rosa-troubleshooting-networking
+  - Name: Verifying node health
+    File: verifying-node-health
 #   cannot create resource "namespaces", cannot patch resource "nodes"
 #   - Name: Troubleshooting CRI-O container runtime issues
 #     File: troubleshooting-crio-issues
@@ -181,34 +183,34 @@ Topics:
 #   - Name: Troubleshooting network issues
 #     File: troubleshooting-network-issues
 #     Distros: openshift-rosa-hcp
-#   - Name: Troubleshooting Operator issues
-#     File: troubleshooting-operator-issues
-#   - Name: Investigating pod issues
-#     File: investigating-pod-issues
+  - Name: Troubleshooting Operator issues
+    File: troubleshooting-operator-issues
+  - Name: Investigating pod issues
+    File: investigating-pod-issues
 #  Hiding from ROSA and OSD until it is decided who should port the Build book
 #   - Name: Troubleshooting the Source-to-Image process
 #     File: troubleshooting-s2i
-#   - Name: Troubleshooting storage issues
-#     File: troubleshooting-storage-issues
+  - Name: Troubleshooting storage issues
+    File: troubleshooting-storage-issues
 #  Not supported per WINC team
 #   - Name: Troubleshooting Windows container workload issues
 #     File: troubleshooting-windows-container-workload-issues
-#   - Name: Investigating monitoring issues
-#     File: investigating-monitoring-issues
-#   - Name: Diagnosing OpenShift CLI (oc) issues
-#     File: diagnosing-oc-issues
-#   - Name: Troubleshooting expired offline access tokens
-#     File: rosa-troubleshooting-expired-tokens
-#     Distros: openshift-rosa-hcp
-#   - Name: Troubleshooting IAM roles
-#     File: rosa-troubleshooting-iam-resources
-#     Distros: openshift-rosa-hcp
-#   - Name: Troubleshooting cluster deployments
-#     File: rosa-troubleshooting-deployments
-#     Distros: openshift-rosa-hcp
-#   - Name: Red Hat OpenShift Service on AWS managed resources
-#     File: sd-managed-resources
-#     Distros: openshift-rosa-hcp
+  - Name: Investigating monitoring issues
+    File: investigating-monitoring-issues
+  - Name: Diagnosing OpenShift CLI (oc) issues
+    File: diagnosing-oc-issues
+  - Name: Troubleshooting expired offline access tokens
+    File: rosa-troubleshooting-expired-tokens
+    Distros: openshift-rosa-hcp
+  - Name: Troubleshooting IAM roles
+    File: rosa-troubleshooting-iam-resources
+    Distros: openshift-rosa-hcp
+  - Name: Troubleshooting cluster deployments
+    File: rosa-troubleshooting-deployments
+    Distros: openshift-rosa-hcp
+  - Name: Red Hat OpenShift Service on AWS managed resources
+    File: sd-managed-resources
+    Distros: openshift-rosa-hcp
 # ---
 # Name: Web console
 # Dir: web_console
