updating topic map for for support book for hcp migration

--- a/_topic_maps/_topic_map_rosa.yml
+++ b/_topic_maps/_topic_map_rosa.yml
@@ -1460,7 +1460,7 @@ Topics:
 # Error: nodes.config.openshift.io "cluster" could not be patched
 #  - Name: Improving cluster stability in high latency environments using worker latency profiles
 #    File: nodes-cluster-worker-latency-profiles
-# Not supported per Michael McNeill
+# Not supported as per Michael McNeill
 #- Name: Remote worker nodes on the network edge
 #  Dir: edge
 #  Topics:
