took spaces from line 157 and 158

--- a/_topic_maps/_topic_map_rosa.yml
+++ b/_topic_maps/_topic_map_rosa.yml
@@ -238,6 +238,8 @@ Topics:
   File: rosa-sts-ocm-role
 - Name: Limits and scalability
   File: rosa-limits-scalability
+- Name: ROSA with HCP limits and scalability
+  File: rosa-hcp-limits-scalability
 - Name: Planning your environment
   File: rosa-planning-environment
 - Name: Required AWS service quotas
@@ -898,6 +900,8 @@ Topics:
   File: configuring-registry-operator
 - Name: Accessing the registry
   File: accessing-the-registry
+# - Name: Exposing the registry
+#   File: securing-exposing-registry
 ---
 Name: Operators
 Dir: operators
@@ -1458,7 +1462,7 @@ Topics:
 # Error: nodes.config.openshift.io "cluster" could not be patched
 #  - Name: Improving cluster stability in high latency environments using worker latency profiles
 #    File: nodes-cluster-worker-latency-profiles
-# Not supported as per Michael McNeill
+# Not supported per Michael McNeill
 #- Name: Remote worker nodes on the network edge
 #  Dir: edge
 #  Topics:
