RHDEVDOCS-6175: creating a separate release note folder and a tile for docs.redhat.com for Pipelines 1.16

--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -22,12 +22,17 @@
 # topic groups and topics on the main page.
 
 ---
+Name: Release notes
+Dir: release_notes
+Distros: openshift-pipelines
+Topics:
+- Name: OpenShift Pipelines release notes
+  File: op-release-notes-1-16
+---
 Name: About OpenShift Pipelines
 Dir: about
 Distros: openshift-pipelines
 Topics:
-- Name: OpenShift Pipelines release notes
-  File: op-release-notes
 - Name: About OpenShift Pipelines
   File: about-pipelines
 - Name: Understanding OpenShift Pipelines
