--- a/_topic_maps/_topic_map_rosa_hcp.yml
+++ b/_topic_maps/_topic_map_rosa_hcp.yml
@@ -65,6 +65,35 @@ Topics:
     File: cloud-experts-getting-started-admin-rights
   - Name: Accessing your cluster
     File: cloud-experts-getting-started-accessing
+  - Name: Managing worker nodes
+    File: cloud-experts-getting-started-managing-worker-nodes
+  - Name: Autoscaling
+    File: cloud-experts-getting-started-autoscaling
+  - Name: Upgrading your cluster
+    File: cloud-experts-getting-started-upgrading
+  - Name: Deleting your cluster
+    File: cloud-experts-getting-started-deleting
+  - Name: Obtaining support
+    File: cloud-experts-getting-started-support
+# ---
+# Name: Architecture
+# Dir: architecture
+# Distros: openshift-rosa-hcp
+# Topics:
+# - Name: Architecture overview
+#   File: index
+# - Name: Product architecture
+#   File: architecture
+# - Name: Architecture models
+#   File: rosa-architecture-models
+# - Name: Control plane architecture
+#   File: control-plane
+# - Name: NVIDIA GPU architecture overview
+#   File: nvidia-gpu-architecture-overview
+# - Name: Understanding OpenShift development
+#   File: understanding-development
+# - Name: Admission plugins
+#   File: admission-plug-ins
 ---
 Name: Tutorials
 Dir: cloud_experts_tutorials
@@ -76,12 +105,28 @@ Topics:
   File: cloud-experts-rosa-hcp-activation-and-account-linking-tutorial
 - Name: ROSA with HCP private offer acceptance and sharing
   File: cloud-experts-rosa-with-hcp-private-offer-acceptance-and-sharing
-- Name: Getting started with ROSA
-  Dir: cloud-experts-getting-started
-  Distros: openshift-rosa-hcp
-  Topics:
-  - Name: Obtaining support
-    File: cloud-experts-getting-started-support
+# - Name: Verifying Permissions for a ROSA STS Deployment
+#   File: rosa-mobb-verify-permissions-sts-deployment
+# - Name: Using AWS WAF and Amazon CloudFront to protect ROSA workloads
+#   File: cloud-experts-using-cloudfront-and-waf
+# - Name: Using AWS WAF and AWS ALBs to protect ROSA workloads
+#   File: cloud-experts-using-alb-and-waf
+# - Name: Deploying OpenShift API for Data Protection on a ROSA cluster
+#   File: cloud-experts-deploy-api-data-protection
+# - Name: AWS Load Balancer Operator on ROSA
+#   File: cloud-experts-aws-load-balancer-operator
+# - Name: Configuring Microsoft Entra ID (formerly Azure Active Directory) as an identity provider
+#   File: cloud-experts-entra-id-idp
+# - Name: Using AWS Secrets Manager CSI on ROSA with STS
+#   File: cloud-experts-aws-secret-manager
+# - Name: Using AWS Controllers for Kubernetes on ROSA
+#   File: cloud-experts-using-aws-ack
+# - Name: Deploying the External DNS Operator on ROSA
+#   File: cloud-experts-external-dns
+# - Name: Dynamically issuing certificates using the cert-manager Operator on ROSA
+#   File: cloud-experts-dynamic-certificate-custom-domain
+# - Name: Assigning consistent egress IP for external traffic
+#   File: cloud-experts-consistent-egress-ip
 - Name: Deploying an application
   Dir: cloud-experts-deploying-application
   Distros: openshift-rosa-hcp
