Add Serving transport encryption docs

--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -132,8 +132,6 @@ Topics:
     File: init-containers
   - Name: Resolving image tags to digests
     File: resolving-image-tags-to-digests
-  - Name: Configuring TLS authentication
-    File: serverless-config-tls
   - Name: Configuring Kourier
     File: configuring-kourier
   - Name: Restrictive network policies
@@ -142,6 +140,8 @@ Topics:
   File: debugging-serverless-applications
 - Name: Kourier and Istio ingresses
   File: kourier-and-istio-ingresses
+- Name: Serving transport encryption
+  File: serving-transport-encryption
 - Name: Traffic splitting
   Dir: traffic-splitting
   Topics:
