CNV-48750: Continued editing topic map and reorganizing driectories

--- a/temp virt toc.yml
+++ b/temp virt toc.yml
@@ -18,8 +18,6 @@
       Topics:
       - Name: Creating VMs from custom images overview
         File: virt-creating-vms-from-custom-images-overview
-#      - Name: Installing the QEMU guest agent and VirtIO drivers
-#        File: virt-installing-qemu-guest-agent
     - Name: Creating VMs Using Third-Party Images
       Dir:  creating_vms_third_party
       Topics:
@@ -27,7 +25,6 @@
         File: virt-creating-vms-from-web-images
       - Name: Creating VMs by uploading images
         File: virt-creating-vms-uploading-images
-
   - Name: Creating VMs using the CLI
     Dir:  creating_vms_cli
     Topics:
@@ -39,11 +36,11 @@
       File: virt-cloning-vms
     - Name: Creating VMs by cloning PVCs
       File: virt-creating-vms-by-cloning-pvcs
-
-
-
-
-
+- Name: Managing VMs
+  Dir:  configuring_vms
+  Topics:
+  - Name: Installing the QEMU guest agent and VirtIO drivers
+    File: virt-installing-qemu-guest-agent
   - Name: Connecting to VM consoles
     File: virt-accessing-vm-consoles
   - Name: Configuring SSH access to VMs
