CNV-48750: Added symlinks to folders in all new directories and started reviewing xrefs

--- a/temp virt toc.yml
+++ b/temp virt toc.yml
@@ -6,7 +6,7 @@
   - Name: Creating VMs from templates
     File: virt-creating-vms-from-templates
 - Name: Advanced VM creation
-  Dir:  virtual_machines
+  Dir:  creating_vms_advanced
   Topics:
   - Name: Creating VMs using images in the web console
     Dir:  creating_vms_with_images_web
@@ -37,7 +37,7 @@
     - Name: Creating VMs by cloning PVCs
       File: virt-creating-vms-by-cloning-pvcs
 - Name: Managing VMs
-  Dir:  configuring_vms
+  Dir:  managing_vms
   Topics:
   - Name: Installing the QEMU guest agent and VirtIO drivers
     File: virt-installing-qemu-guest-agent
