TRACING-4560: improvements and clarifications regarding sidecar injection and instrumentation injection
Signed-off-by: Israel Blancas <iblancas@redhat.com>

--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -2977,8 +2977,8 @@ Topics:
       File: otel-collector-target-allocator
   - Name: Configuring the instrumentation
     File: otel-configuration-of-instrumentation
-  - Name: Sending traces and metrics to the Collector
-    File: otel-sending-traces-and-metrics-to-otel-collector
+  - Name: Sending traces, logs and metrics to the Collector
+    File: otel-sending-traces-logs-and-metrics-to-otel-collector
   - Name: Configuring metrics for the monitoring stack
     File: otel-configuring-metrics-for-monitoring-stack
   - Name: Forwarding telemetry data
