--- a/.s2i/httpd-cfg/01-commercial.conf
+++ b/.s2i/httpd-cfg/01-commercial.conf
@@ -338,6 +338,11 @@ AddType text/vtt                            vtt
     # GitOps landing page
     RewriteRule ^container-platform/(4\.11|4\.12|4\.13|4\.14|4\.15|4\.16|4\.17|4\.18)/cicd/gitops/about-redhat-openshift-gitops.html /gitops/latest/understanding_openshift_gitops/about-redhat-openshift-gitops.html  [L,R=302]
 
+    # GitOps release notes version switch
+
+    RewriteRule ^gitops/1\.(8|9|10|11|12|13)/release_notes/gitops-release-notes?(.*).html gitops/1.$1/release_notes/gitops-release-notes.html
+    RewriteRule ^gitops/1\.(14|15|16)/release_notes/gitops-release-notes?(.*).html gitops/1.$1/release_notes/gitops-release-notes-1-$1.html
+
     # redirect any links to existing OCP embedded content to standalone equivalent for each assembly
     RewriteRule ^container-platform/(4\.11|4\.12|4\.13|4\.14|4\.15|4\.16|4\.17|4\.18)/cicd/gitops/gitops-release-notes.html/ /gitops/latest/release_notes/gitops-release-notes-1-14.html  [L,R=302]
     RewriteRule ^container-platform/(4\.11|4\.12|4\.13|4\.14|4\.15|4\.16|4\.17|4\.18)/cicd/gitops/understanding-openshift-gitops.html /gitops/latest/understanding_openshift_gitops/about-redhat-openshift-gitops.html [L,R=302]
