[enterprise-4.14] Oadp 4074 network settings

--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -3141,6 +3141,11 @@ Topics:
       File: oadp-release-notes-1-2
     - Name: OADP 1.1 release notes
       File: oadp-release-notes-1-1
+  - Name: OADP performance
+    Dir: oadp-performance
+    Topics:
+    - Name: OADP recommended network settings
+      File: oadp-recommended-network-settings
   - Name: OADP features and plugins
     File: oadp-features-plugins
   - Name: OADP use cases
