review changes, added Pipelines

--- a/.s2i/httpd-cfg/01-commercial.conf
+++ b/.s2i/httpd-cfg/01-commercial.conf
@@ -340,8 +340,8 @@ AddType text/vtt                            vtt
 
     # GitOps release notes version switch
 
-    RewriteRule ^gitops/1\.(8|9|10|11|12|13)/release_notes/gitops-release-notes?(.*).html gitops/1.$1/release_notes/gitops-release-notes.html
-    RewriteRule ^gitops/1\.(14|15|16)/release_notes/gitops-release-notes?(.*).html gitops/1.$1/release_notes/gitops-release-notes-1-$1.html
+    RewriteRule ^gitops/1\.(8|9|10|11|12|13)/release_notes/gitops-release-notes-1-([0-9]+)\.html$ gitops/1.$1/release_notes/gitops-release-notes.html [L,R=302]
+    RewriteRule ^gitops/1\.(14|15|16)/release_notes/gitops-release-notes?(.*)\.html$ gitops/1.$1/release_notes/gitops-release-notes.html [L,R=302]
 
     # redirect any links to existing OCP embedded content to standalone equivalent for each assembly
     RewriteRule ^container-platform/(4\.11|4\.12|4\.13|4\.14|4\.15|4\.16|4\.17|4\.18)/cicd/gitops/gitops-release-notes.html/ /gitops/latest/release_notes/gitops-release-notes-1-14.html  [L,R=302]
@@ -386,6 +386,13 @@ AddType text/vtt                            vtt
     # Pipelines handling unversioned and latest links
     RewriteRule ^pipelines/?$ /pipelines/latest [R=302]
     RewriteRule ^pipelines/latest/?(.*)$ /pipelines/1\.15/$1 [NE,R=302]
+
+    # Pipelines release notes version switch
+
+    RewriteRule ^pipelines/1\.(10|11|12|13|14|15)/release_notes/op-release-notes-1-([0-9]+)\.html$ pipelines/1.$1/about/op-release-notes.html [L,R=302]
+    RewriteRule ^pipelines/1\.(16|17|17)/release_notes/op-release-notes?(.*)\.html$ pipelines/1.$1/release_notes/pipelines-release-notes.html [L,R=302]
+    RewriteRule ^pipelines/1\.(16|17|17)/anput/op-release-notes\.html$ pipelines/1.$1/release_notes/pipelines-release-notes.html [L,R=302]
+
 
     # Pipelines landing page
 
