MGMT-18682: Adding standalone IBI workflow

--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -3335,6 +3335,17 @@ Topics:
 #     File: telco-core-ref-design-components
 #   - Name: Core reference design configuration CRs
 #     File: telco-core-ref-crs
+- Name: Image-based installation for single-node OpenShift clusters
+  Dir: image-base-install
+  Topics:
+  - Name: Understanding an image-based installation and deployment for standalone single-node OpenShift clusters
+    File: ibi-understanding-image-based-install
+  - Name: Preparing for an image-based installation for standalone single-node OpenShift clusters
+    File: ibi-preparing-for-image-based-install
+  - Name: Installing a standalone single-node OpenShift cluster using an image-based installation
+    File: ibi-factory-image-based-install
+  - Name: Deploying a standalone single-node OpenShift cluster using the installation program
+    File: ibi-edge-image-based-install-standalone
 ---
 Name: Specialized hardware and driver enablement
 Dir: hardware_enablement
