SRVLOGIC-352-Supporting-Services: Added the supporting services section in the OSL docs

--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -376,6 +376,8 @@ Topics:
     File: serverless-logic-job-service
   - Name: Data Index service
     File: serverless-logic-data-index
+  - Name: Managing supporting services
+    File: serverless-logic-managing-supporting-services
 ---
 # Knative kn CLI
 Name: Knative CLI
