OSDOCS-12285.1:Updated HCP topic map

--- a/_topic_maps/_topic_map_rosa_hcp.yml
+++ b/_topic_maps/_topic_map_rosa_hcp.yml
@@ -247,7 +247,7 @@ Topics:
 # Dir: rosa_backing_up_and_restoring_applications
 # Distros: openshift-rosa-hcp
 # Topics:
-# - Name: Installing OADP on ROSA with STS
+# - Name: Backing up applications
 #   File: backing-up-applications
 ---
 Name: Nodes
