Fix build errors

--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -2260,8 +2260,8 @@ Distros: openshift-enterprise, openshift-origin
 Topics:
 - Name: Machine configuration overview
   File: index
-- Name: About using machine configs to configure nodes
-  File: machine-config-about
+- Name: About machine configs pools
+  File: machine-config-pools-about
 - Name: Configuring nodes by using machine config objects
   File: machine-configs-configure
 - Name: Using node disruption policies to minimize disruption from machine config changes
