OSDOCS-11411 Adding multiarch scheduling section for ROSA and OSD

--- a/_topic_maps/_topic_map_rosa.yml
+++ b/_topic_maps/_topic_map_rosa.yml
@@ -1344,7 +1344,7 @@ Topics:
 #   File: nodes-scheduler-node-projects
 # - Name: Keeping your cluster balanced using the descheduler
 #   File: nodes-scheduler-descheduler
-# Cannot create namespace to install Desceduler Operator; revisit after Operator book converted
+# Cannot create namespace to install Descheduler Operator; revisit after Operator book converted
 #  - Name: Evicting pods using the descheduler
 #   File: nodes-descheduler
 # Cannot create namespace to install Secondary Scheduler Operator; revisit after Operator book converted
@@ -1360,6 +1360,8 @@ Topics:
 #     File: nodes-secondary-scheduler-configuring
 #   - Name: Uninstalling the Secondary Scheduler Operator
 #     File: nodes-secondary-scheduler-uninstalling
+  - Name: Scheduling workloads on clusters with multi-architecture compute machines
+    File: multi-architecture-compute-scheduling
 - Name: Using Jobs and DaemonSets
   Dir: jobs
   Topics:
