--- a/_topic_maps/_topic_map_rosa_hcp.yml
+++ b/_topic_maps/_topic_map_rosa_hcp.yml
@@ -1281,6 +1281,9 @@ Topics:
 #      File: nodes-secondary-scheduler-configuring
 #    - Name: Uninstalling the Secondary Scheduler Operator
 #      File: nodes-secondary-scheduler-uninstalling
+# TODO OSDOCS-11411: The following file needs to be included in the HCP migration
+#  - Name: Scheduling workloads on clusters with multi-architecture compute machines
+#    File: multi-architecture-compute-scheduling
 # - Name: Using Jobs and DaemonSets
 #   Dir: jobs
 #   Topics:
