--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -3435,6 +3435,7 @@ Topics:
       File: oadp-aws-sts
   - Name: OADP and 3scale
     Dir: installing
+    Topics:
     - Name: Backing up and restoring with 3scale
       File: 3scale
   - Name: OADP 1.2 Data Mover
