structure: create ipi subdir

--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -360,16 +360,20 @@ Topics:
     File: configuring-iam-ibm-cloud
   - Name: User-managed encryption
     File: user-managed-encryption-ibm-cloud
-  - Name: Installing a cluster on IBM Cloud with customizations
-    File: installing-ibm-cloud-customizations
-  - Name: Installing a cluster on IBM Cloud with network customizations
-    File: installing-ibm-cloud-network-customizations
-  - Name: Installing a cluster on IBM Cloud into an existing VPC
-    File: installing-ibm-cloud-vpc
-  - Name: Installing a private cluster on IBM Cloud
-    File: installing-ibm-cloud-private
-  - Name: Installing a cluster on IBM Cloud in a restricted network
-    File: installing-ibm-cloud-restricted
+  - Name: Installer-provisioned infrastructure
+    Dir: ipi
+    Distros: openshift-origin,openshift-enterprise
+    Topics:
+    - Name: Installing a cluster with customizations on IBM Cloud
+      File: installing-ibm-cloud-customizations
+    - Name: Installing a cluster with network customizations on IBM Cloud
+      File: installing-ibm-cloud-network-customizations
+    - Name: Installing a cluster with an existing VPC network on IBM Cloud
+      File: installing-ibm-cloud-vpc
+    - Name: Installing a private cluster with an existing VPC network on IBM Cloud
+      File: installing-ibm-cloud-private
+    - Name: Installing a cluster with a restricted VPC network on IBM Cloud
+      File: installing-ibm-cloud-restricted
   - Name: Installation configuration parameters for IBM Cloud
     File: installation-config-parameters-ibm-cloud-vpc
   - Name: Uninstalling a cluster on IBM Cloud
