--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -125,8 +125,8 @@ Topics:
   File: routing-traffic-by-using-argo-rollouts-for-openshift-service-mesh
 - Name: Enabling support for namespace-scoped Argo Rollouts installation
   File: enable-support-for-namespace-scoped-argo-rollouts-installation
-- Name: Using a cluster scoped rollouts instance to manage rollouts resources
-  File: using-cluster-scoped-rollouts-instance-to-manage-rollouts-resources 
+- Name: Using a cluster-scoped rollouts instance to manage rollouts resources
+  File: using-cluster-scoped-rollouts-instance-to-manage-rollouts-resources
 ---
 Name: Security
 Dir: securing_openshift_gitops
