OADP 4878 Added install section for Ibm Cloud
Signed-off-by: Shruti Deshpande <shdeshpa@redhat.com>

--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -3382,6 +3382,8 @@ Topics:
       File: oadp-installing-operator
     - Name: Configuring OADP with AWS S3 compatible storage
       File: installing-oadp-aws
+      - Name: Configuring OADP with IBM Cloud
+      File: installing-oadp-ibm-cloud
     - Name: Configuring OADP with Azure
       File: installing-oadp-azure
     - Name: Configuring OADP with GCP
@@ -3391,7 +3393,7 @@ Topics:
     - Name: Configuring OADP with ODF
       File: installing-oadp-ocs
     - Name: Configuring OADP with OpenShift Virtualization
-      File: installing-oadp-kubevirt
+      File: installing-oadp-kubevirt    
     - Name: Configuring OADP with multiple backup storage locations
       File: configuring-oadp-multiple-bsl
     - Name: Configuring OADP with multiple Volume Snapshot Locations
