readded Name: Storageto rosa topic map

--- a/_topic_maps/_topic_map_rosa.yml
+++ b/_topic_maps/_topic_map_rosa.yml
@@ -862,7 +862,7 @@ Topics:
 - Name: Available services
   File: rosa-available-services
 ---
-
+Name: Storage
 Dir: storage
 Distros: openshift-rosa
 Topics:
