--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -111,6 +111,8 @@ Name: Disconnected environments
 Dir: disconnected
 Distros: openshift-enterprise,openshift-origin
 Topics:
+- Name: About disconnected environments
+  File: about
 - Name: Converting a connected cluster to a disconnected cluster
   File: connected-to-disconnected
 - Name: Mirroring in disconnected environments
