--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -420,7 +420,7 @@ Topics:
   File: getting-support
 ---
 Name: API reference
-Dir: rest_api
+Dir: api
 Distros: openshift-acs
 Topics:
   - Name: AdministrationEventService
