--- a/_topic_maps/_topic_map_rosa_hcp.yml
+++ b/_topic_maps/_topic_map_rosa_hcp.yml
@@ -75,6 +75,11 @@ Topics:
     File: cloud-experts-getting-started-deleting
   - Name: Obtaining support
     File: cloud-experts-getting-started-support
+- Name: Deploying an application workshop
+  Dir: deploying_application_workshop
+  Topics:
+  - Name: Workshop overview
+    File: learning-lab-overview
 # ---
 # Name: Architecture
 # Dir: architecture
@@ -127,16 +132,40 @@ Topics:
 #   File: cloud-experts-dynamic-certificate-custom-domain
 # - Name: Assigning consistent egress IP for external traffic
 #   File: cloud-experts-consistent-egress-ip
-- Name: Deploying an application
-  Dir: cloud-experts-deploying-application
-  Distros: openshift-rosa-hcp
-  Topics:
-  - Name: Introduction
-    File: cloud-experts-deploying-application-intro
-  - Name: Prerequisites
-    File: cloud-experts-deploying-application-prerequisites
-  - Name: Lab Overview
-    File: cloud-experts-deploying-application-lab-overview
+# ---
+# Name: Getting started
+# Dir: rosa_getting_started
+# Distros: openshift-rosa-hcp
+# Topics:
+# - Name: ROSA quickstart guide
+#   File: rosa-quickstart-guide-ui
+# - Name: Comprehensive guide to getting started with ROSA
+#   File: rosa-getting-started
+# - Name: Understanding the ROSA with STS deployment workflow
+#   File: rosa-sts-getting-started-workflow
+# ---
+# Name: Prepare your environment
+# Dir: rosa_planning
+# Distros: openshift-rosa-hcp
+# Topics:
+# - Name: Prerequisites checklist for deploying ROSA using STS
+#   File: rosa-cloud-expert-prereq-checklist
+# - Name: Detailed requirements for deploying ROSA using STS
+#   File: rosa-sts-aws-prereqs
+# - Name: ROSA IAM role resources
+#   File: rosa-sts-ocm-role
+# - Name: Limits and scalability
+#   File: rosa-limits-scalability
+#- Name: ROSA with HCP limits and scalability
+#  File: rosa-hcp-limits-scalability
+# - Name: Planning your environment
+#   File: rosa-planning-environment
+# - Name: Required AWS service quotas
+#   File: rosa-sts-required-aws-service-quotas
+# - Name: Setting up your environment
+#   File: rosa-sts-setting-up-environment
+# - Name: Preparing Terraform to install ROSA clusters
+#   File: rosa-understanding-terraform
 ---
 Name: Install ROSA with HCP clusters
 Dir: rosa_hcp
