OSDOCS-12375: Replace directory structure

--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -2310,59 +2310,69 @@ Distros: openshift-origin,openshift-enterprise
 Topics:
 - Name: Overview of machine management
   File: index
+- Name: Machine phases and lifecycle
+  File: machine-phases-lifecycle
 - Name: Managing compute machines with the Machine API
   Dir: creating_machinesets
   Distros: openshift-origin,openshift-enterprise
   Topics:
-  - Name: Creating a compute machine set on AWS
-    File: creating-machineset-aws
-  - Name: Creating a compute machine set on Azure
-    File: creating-machineset-azure
-  - Name: Creating a compute machine set on Azure Stack Hub
-    File: creating-machineset-azure-stack-hub
-  - Name: Creating a compute machine set on GCP
-    File: creating-machineset-gcp
-  - Name: Creating a compute machine set on IBM Cloud
-    File: creating-machineset-ibm-cloud
-  - Name: Creating a compute machine set on IBM Power Virtual Server
-    File: creating-machineset-ibm-power-vs
-  - Name: Creating a compute machine set on Nutanix
-    File: creating-machineset-nutanix
-  - Name: Creating a compute machine set on OpenStack
-    File: creating-machineset-osp
-  - Name: Creating a compute machine set on vSphere
-    File: creating-machineset-vsphere
-  - Name: Creating a compute machine set on bare metal
-    File: creating-machineset-bare-metal
-- Name: Manually scaling a compute machine set
-  File: manually-scaling-machineset
-- Name: Modifying a compute machine set
-  File: modifying-machineset
-- Name: Machine phases and lifecycle
-  File: machine-phases-lifecycle
-- Name: Deleting a machine
-  File: deleting-machine
-- Name: Applying autoscaling to a cluster
-  File: applying-autoscaling
-- Name: Creating infrastructure machine sets
-  File: creating-infrastructure-machinesets
-- Name: Adding a RHEL compute machine
-  File: adding-rhel-compute
-  Distros: openshift-enterprise
-- Name: Adding more RHEL compute machines
-  File: more-rhel-compute
-  Distros: openshift-enterprise
-- Name: Managing user-provisioned infrastructure manually
-  Dir: user_infra
-  Topics:
-  - Name: Adding compute machines to clusters with user-provisioned infrastructure manually
-    File: adding-compute-user-infra-general
-  - Name: Adding compute machines to AWS using CloudFormation templates
-    File: adding-aws-compute-user-infra
-  - Name: Adding compute machines to vSphere manually
-    File: adding-vsphere-compute-user-infra
-  - Name: Adding compute machines to bare metal
-    File: adding-bare-metal-compute-user-infra
+  - Name: About compute machine sets
+    File: mapi-compute-about
+  - Name: Getting started with compute machine sets
+    File: mapi-compute-getting-started
+  - Name: Managing compute machines with compute machine sets
+    File: mapi-compute-managing-machines
+  - Name: Compute machine set configuration
+    File: mapi-compute-configuration
+  - Name: Configuration options for compute machines
+    Dir: mapi-compute_provider_configurations
+    Topics:
+    - Name: Compute configuration options for Amazon Web Services
+      File: mapi-compute-config-options-aws
+    - Name: Compute configuration options for Microsoft Azure
+      File: mapi-compute-config-options-azure
+    - Name: Compute configuration options for Google Cloud Platform
+      File: mapi-compute-config-options-gcp
+    - Name: Compute configuration options for Nutanix
+      File: mapi-compute-config-options-nutanix
+    - Name: Compute configuration options for Red Hat OpenStack Platform
+      File: mapi-compute-config-options-openstack
+    - Name: Compute configuration options for VMware vSphere
+      File: mapi-compute-config-options-vsphere
+      - Name: Creating a compute machine set on AWS
+        File: creating-machineset-aws
+      - Name: Creating a compute machine set on Azure
+        File: creating-machineset-azure
+      - Name: Creating a compute machine set on Azure Stack Hub
+        File: creating-machineset-azure-stack-hub
+      - Name: Creating a compute machine set on GCP
+        File: creating-machineset-gcp
+      - Name: Creating a compute machine set on IBM Cloud
+        File: creating-machineset-ibm-cloud
+      - Name: Creating a compute machine set on IBM Power Virtual Server
+        File: creating-machineset-ibm-power-vs
+      - Name: Creating a compute machine set on Nutanix
+        File: creating-machineset-nutanix
+      - Name: Creating a compute machine set on OpenStack
+        File: creating-machineset-osp
+      - Name: Creating a compute machine set on vSphere
+        File: creating-machineset-vsphere
+      - Name: Creating a compute machine set on bare metal
+        File: creating-machineset-bare-metal
+    - Name: Manually scaling a compute machine set
+      File: manually-scaling-machineset
+    - Name: Modifying a compute machine set
+      File: modifying-machineset
+    - Name: Creating infrastructure machine sets
+      File: creating-infrastructure-machinesets
+  - Name: Applying autoscaling to a cluster
+    File: applying-autoscaling
+  - Name: Compute resiliency and recovery
+    File: mapi-compute-resiliency
+  - Name: Troubleshooting the compute machine set
+    File: mapi-compute-troubleshooting
+  - Name: Disabling the compute machine set
+    File: mapi-compute-disabling
 - Name: Managing control plane machines
   Dir: control_plane_machine_management
   Topics:
@@ -2395,6 +2405,28 @@ Topics:
     File: cpmso-troubleshooting
   - Name: Disabling the control plane machine set
     File: cpmso-disabling
+- Name: Managing compute machines manually
+  Dir: creating_machinesets
+  Topics:
+  - Name: Managing user-provisioned infrastructure manually
+    Dir: user_infra
+    Topics:
+    - Name: Adding compute machines to clusters with user-provisioned infrastructure manually
+      File: adding-compute-user-infra-general
+    - Name: Adding compute machines to AWS using CloudFormation templates
+      File: adding-aws-compute-user-infra
+    - Name: Adding compute machines to vSphere manually
+      File: adding-vsphere-compute-user-infra
+    - Name: Adding compute machines to bare metal
+      File: adding-bare-metal-compute-user-infra
+  - Name: Adding a RHEL compute machine
+    File: adding-rhel-compute
+    Distros: openshift-enterprise
+  - Name: Adding more RHEL compute machines
+    File: more-rhel-compute
+    Distros: openshift-enterprise 
+  - Name: Deleting a machine
+    File: deleting-machine
 - Name: Managing machines with the Cluster API
   Dir: cluster_api_machine_management
   Topics:
@@ -2424,6 +2456,126 @@ Topics:
 - Name: Deploying machine health checks
   File: deploying-machine-health-checks
 ---
+# Name: Machine management
+# Dir: machine_management_old
+# Distros: openshift-origin,openshift-enterprise
+# Topics:
+# - Name: Overview of machine management
+#   File: index
+# - Name: Managing compute machines with the Machine API
+#   Dir: creating_machinesets
+#   Distros: openshift-origin,openshift-enterprise
+#   Topics:
+#   - Name: Creating a compute machine set on AWS
+#     File: creating-machineset-aws
+#   - Name: Creating a compute machine set on Azure
+#     File: creating-machineset-azure
+#   - Name: Creating a compute machine set on Azure Stack Hub
+#     File: creating-machineset-azure-stack-hub
+#   - Name: Creating a compute machine set on GCP
+#     File: creating-machineset-gcp
+#   - Name: Creating a compute machine set on IBM Cloud
+#     File: creating-machineset-ibm-cloud
+#   - Name: Creating a compute machine set on IBM Power Virtual Server
+#     File: creating-machineset-ibm-power-vs
+#   - Name: Creating a compute machine set on Nutanix
+#     File: creating-machineset-nutanix
+#   - Name: Creating a compute machine set on OpenStack
+#     File: creating-machineset-osp
+#   - Name: Creating a compute machine set on vSphere
+#     File: creating-machineset-vsphere
+#   - Name: Creating a compute machine set on bare metal
+#     File: creating-machineset-bare-metal
+# - Name: Manually scaling a compute machine set
+#   File: manually-scaling-machineset
+# - Name: Modifying a compute machine set
+#   File: modifying-machineset
+# - Name: Machine phases and lifecycle
+#   File: machine-phases-lifecycle
+# - Name: Deleting a machine
+#   File: deleting-machine
+# - Name: Applying autoscaling to a cluster
+#   File: applying-autoscaling
+# - Name: Creating infrastructure machine sets
+#   File: creating-infrastructure-machinesets
+# - Name: Adding a RHEL compute machine
+#   File: adding-rhel-compute
+#   Distros: openshift-enterprise
+# - Name: Adding more RHEL compute machines
+#   File: more-rhel-compute
+#   Distros: openshift-enterprise
+# - Name: Managing user-provisioned infrastructure manually
+#   Dir: user_infra
+#   Topics:
+#   - Name: Adding compute machines to clusters with user-provisioned infrastructure manually
+#     File: adding-compute-user-infra-general
+#   - Name: Adding compute machines to AWS using CloudFormation templates
+#     File: adding-aws-compute-user-infra
+#   - Name: Adding compute machines to vSphere manually
+#     File: adding-vsphere-compute-user-infra
+#   - Name: Adding compute machines to bare metal
+#     File: adding-bare-metal-compute-user-infra
+# - Name: Managing control plane machines
+#   Dir: control_plane_machine_management
+#   Topics:
+#   - Name: About control plane machine sets
+#     File: cpmso-about
+#   - Name: Getting started with control plane machine sets
+#     File: cpmso-getting-started
+#   - Name: Managing control plane machines with control plane machine sets
+#     File: cpmso-managing-machines
+#   - Name: Control plane machine set configuration
+#     File: cpmso-configuration
+#   - Name: Configuration options for control plane machines
+#     Dir: cpmso_provider_configurations
+#     Topics:
+#     - Name: Control plane configuration options for Amazon Web Services
+#       File: cpmso-config-options-aws
+#     - Name: Control plane configuration options for Microsoft Azure
+#       File: cpmso-config-options-azure
+#     - Name: Control plane configuration options for Google Cloud Platform
+#       File: cpmso-config-options-gcp
+#     - Name: Control plane configuration options for Nutanix
+#       File: cpmso-config-options-nutanix
+#     - Name: Control plane configuration options for Red Hat OpenStack Platform
+#       File: cpmso-config-options-openstack
+#     - Name: Control plane configuration options for VMware vSphere
+#       File: cpmso-config-options-vsphere
+#   - Name: Control plane resiliency and recovery
+#     File: cpmso-resiliency
+#   - Name: Troubleshooting the control plane machine set
+#     File: cpmso-troubleshooting
+#   - Name: Disabling the control plane machine set
+#     File: cpmso-disabling
+# - Name: Managing machines with the Cluster API
+#   Dir: cluster_api_machine_management
+#   Topics:
+#   - Name: About the Cluster API
+#     File: cluster-api-about
+#   - Name: Getting started with the Cluster API
+#     File: cluster-api-getting-started
+#   - Name: Managing machines with the Cluster API
+#     File: cluster-api-managing-machines
+#   - Name: Cluster API configuration
+#     File: cluster-api-configuration
+#   - Name: Configuration options for Cluster API machines
+#     Dir: cluster_api_provider_configurations
+#     Topics:
+#     - Name: Cluster API configuration options for Amazon Web Services
+#       File: cluster-api-config-options-aws
+#     - Name: Cluster API configuration options for Google Cloud Platform
+#       File: cluster-api-config-options-gcp
+#     - Name: Cluster API configuration options for VMware vSphere
+#       File: cluster-api-config-options-vsphere
+# #  - Name: Cluster API resiliency and recovery
+# #    File: cluster-api-resiliency
+#   - Name: Troubleshooting Cluster API clusters
+#     File: cluster-api-troubleshooting
+# #  - Name: Disabling Cluster API machine sets
+# #    File: cluster-api-disabling
+# - Name: Deploying machine health checks
+#   File: deploying-machine-health-checks
+# ---
 Name: Hosted control planes
 Dir: hosted_control_planes
 Distros: openshift-enterprise, openshift-origin
