--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -2881,6 +2881,8 @@ Topics:
         File: log6x-clf
       - Name: Configuring LokiStack storage
         File: log6x-loki
+      - Name: Otel data model
+        File: log6x-otel-data-model
       - Name: Visualization for logging
         File: log6x-visual
 #      - Name: API reference 6.0
