fixing PV1 errors

--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -3538,10 +3538,14 @@ Topics:
   Topics:
   - Name: About Monitoring APIs
     File: monitoring-apis-index
+  - Name: 'AlertingRule [monitoring.openshift.io/v1]'
+    File: alertingrule-monitoring-openshift-io-v1
   - Name: 'Alertmanager [monitoring.coreos.com/v1]'
     File: alertmanager-monitoring-coreos-com-v1
   - Name: 'AlertmanagerConfig [monitoring.coreos.com/v1beta1]'
     File: alertmanagerconfig-monitoring-coreos-com-v1beta1
+  - Name: 'AlertRelabelConfig [monitoring.openshift.io/v1'
+    File: alertrelabelconfig-monitoring-openshift-io-v1
   - Name: 'PodMonitor [monitoring.coreos.com/v1]'
     File: podmonitor-monitoring-coreos-com-v1
   - Name: 'Probe [monitoring.coreos.com/v1]'
