Fixing PV1 builds for 4.16 apis

--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -3465,6 +3465,11 @@ Topics:
     File: editing-kubelet-log-level-verbosity
   - Name: API list
     File: index
+- Name: Common object reference
+  Dir: objects
+  Topics:
+  - Name: Index
+    File: index
 - Name: Authorization APIs
   Dir: authorization_apis
   Topics:
