bugfix: descriptive titles accuracy

--- a/_topic_maps/_topic_map.yml
+++ b/_topic_maps/_topic_map.yml
@@ -392,13 +392,13 @@ Topics:
     File: uninstalling-cluster-nutanix
   - Name: Installation configuration parameters for Nutanix
     File: installation-config-parameters-nutanix
-- Name: Installing on-premise with Assisted Installer
+- Name: Installing on-premise with the Assisted Installer
   Dir: installing_on_prem_assisted
   Distros: openshift-enterprise
   Topics:
-  - Name: Installing an on-premise cluster using the Assisted Installer
+  - Name: Installing on-premise with the Assisted Installer
     File: installing-on-prem-assisted
-- Name: Installing an on-premise cluster with the Agent-based Installer
+- Name: Installing on-premise with the Agent-based Installer
   Dir: installing_with_agent_based_installer
   Distros: openshift-enterprise
   Topics:
@@ -438,7 +438,7 @@ Topics:
     File: scaling-a-user-provisioned-cluster-with-the-bare-metal-operator
   - Name: Installation configuration parameters for bare metal
     File: installation-config-parameters-bare-metal
-- Name: Deploying installer-provisioned clusters on bare metal
+- Name: Installing on bare metal
   Dir: installing_bare_metal_ipi
   Distros: openshift-origin,openshift-enterprise
   Topics:
